# sarFBR

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
scripts/: check.py  install_cupy.py
src/sarFbr/: __init__.py  fbr.py
src/sarfbr/: __init__.py  fbr.py
tests/: test_fbr.py  test_smoke.py
