[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarfbr"
version = "0.1.0"
description = "SAR Frozen Background Reference (FBR) method for ephemeral-object change detection in SAR time-series"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yap Joon Siong" }]
keywords = [
    "SAR",
    "synthetic aperture radar",
    "remote sensing",
    "change detection",
    "FBR",
    "frozen background reference",
    "ephemeral objects",
    "speckle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# Optional GPU acceleration. Install the CuPy wheel matching your CUDA toolkit,
# e.g. `pip install cupy-cuda12x` (or cupy-cuda11x). Listed here so that
# `pip install "sarfbr[gpu]"` attempts to pull a working CuPy build.
gpu = ["cupy"]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/yapitsmejs/sarFBR"
Documentation = "https://github.com/yapitsmejs/sarFBR#readme"
Issues = "https://github.com/yapitsmejs/sarFBR/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]